# SimpleGL

./: CMakeLists.txt  README.md
SimpleGL/: CMakeLists.txt  Camera.cpp  Camera.h  Defs.cpp  Defs.h  GLAnimateModel.cpp  GLAnimateModel.h  GLFilter.cpp  GLFilter.h  GLLight.cpp  GLLight.h  GLMixObject.cpp  GLMixObject.h  GLModel.cpp  GLModel.h  GLObject.cpp  GLObject.h  GLScene.cpp  GLScene.h  MainWidget.cpp  MainWidget.h  MainWidget.ui  PaintingWidget.cpp  PaintingWidget.h  RayTracing.cpp  RayTracing.h  SimpleGL.qrc  StopWatch.h  Utils.cpp  Utils.h  main.cpp
SimpleGL/resources/scene/: MyScene.json
SimpleGL/resources/shader/: animate_mesh.vert  cube.vert  cylinder.vert  filter.vert  filter_inverse.frag  filter_none.frag  mesh.frag  mesh.vert  plane.vert  simpleObj.frag  skybox.frag  skybox.vert  sphere.vert
cmake/: ConfigureAssimp.cmake  ConfigureJsoncpp.cmake  FindEigen3.cmake  Findlibigl.cmake
